option('docs', type : 'feature', value : 'auto', description : 'Generate documents with Doxygen')
option('docsdir', type : 'string', value : 'share/doc/libthai', description : 'Where to install the Doxygen-generated HTML doc')
option('dict', type : 'boolean', value : true, description : 'Enable dictionary data generation (require libdatrie)')
