headers_src = files(
	'thai/thailib.h',
	'thai/thctype.h',
	'thai/thstr.h',
	'thai/thcoll.h',
	'thai/thcell.h',
	'thai/thinp.h',
	'thai/thrend.h',
	'thai/thbrk.h',
	'thai/thwchar.h',
	'thai/thwctype.h',
	'thai/thwcoll.h',
	'thai/thwinp.h',
	'thai/thwrend.h',
	'thai/thwstr.h',
	'thai/thwbrk.h',
	'thai/tis.h',
	'thai/wtt.h'
)
install_headers(
	headers_src,
	subdir : 'thai',
)

include_dir = include_directories('.')
