headers_src = files(
    'thai/thailib.h',
    'thai/thbrk.h',
    'thai/thcell.h',
    'thai/thcoll.h',
    'thai/thctype.h',
    'thai/thinp.h',
    'thai/thrend.h',
    'thai/thstr.h',
    'thai/thwbrk.h',
    'thai/thwchar.h',
    'thai/thwcoll.h',
    'thai/thwctype.h',
    'thai/thwinp.h',
    'thai/thwrend.h',
    'thai/thwstr.h',
    'thai/tis.h',
    'thai/wtt.h',
)
install_headers(headers_src, subdir: 'thai')

include_dir = include_directories('.')
