# $Id: Makefile.am,v 1.5 2001-08-08 12:39:18 thep Exp $
libthaiincludedir = $(includedir)/thai
libthaiinclude_HEADERS = \
	thailib.h \
	thctype.h \
	thstr.h \
	thcoll.h \
	thcell.h \
	thinp.h \
	thrend.h \
	thbrk.h \
	thwchar.h \
	thwctype.h \
	thwcoll.h \
	thwinp.h \
	thwrend.h \
	thwbrk.h \
	tis.h \
	wtt.h

