# $Id: Makefile.am,v 1.6 2003-09-10 05:29:45 thep Exp $
libthaiincludedir = $(includedir)/thai
libthaiinclude_HEADERS = \
	thailib.h \
	thctype.h \
	thstr.h \
	thcoll.h \
	thcell.h \
	thinp.h \
	thrend.h \
	thbrk.h \
	thwchar.h \
	thwctype.h \
	thwcoll.h \
	thwinp.h \
	thwrend.h \
	thwstr.h \
	thwbrk.h \
	tis.h \
	wtt.h

